# loomctl

./: .dockerignore  .gitignore  Dockerfile  README.md  README.zh-CN.md  TODO.md  VISION.md  loom.config.example.json  package-lock.json  package.json  tsconfig.json  wdio.desktop.conf.mjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.e2e.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/linux/: loom-desktop.desktop
apps/desktop/src-tauri/src/: auth.rs  credentials.rs  diagnostics.rs  lib.rs  main.rs  native_http.rs  security.rs  updates.rs
coder-template/: README.md  main.tf
docker/: workspace.Dockerfile
docs/: authentication.md  brain-benchmark.md  desktop-production.md  disaster-recovery.md  distributed-runtime.md  operator-runbook.md  platform-staging-checkpoint.md  slo.md  upstream-agent-git-service-integration.md
hooks/: loom-ssh-forcecommand.sh  loom-stop-hook.sh
scripts/: build-frontend.mjs  desktop-release-lib.mjs  production-check.mjs  promote-desktop-release.mjs  staging-two-instance.mjs  staging-up.mjs  upstream-agent-git-service-local.sh  verify-desktop-release.mjs  verify-linux-desktop-packages.sh
src/: brain-benchmark.ts  brain-evidence.ts  brain.ts  commands.ts  config.ts  index.ts  loomd.ts  native.ts  provisioner.ts  tenant.ts  users.ts
tests/: agent-git-service-contract-probe.test.ts  agent-git-service-contract.test.ts  agent-git-service-provisioning.test.ts  agent-git-service.test.ts  brain-benchmark.test.ts  brain.test.ts  cli-brain-benchmark.test.ts  cli-disaster-recovery.test.ts  cli-harness.test.ts  coder-template.test.ts  commands.test.ts  control-plane.test.ts  desktop-cache.test.ts  desktop-installed.e2e.mjs  desktop-profile.test.ts  desktop-release.test.ts  desktop-updater-installed.e2e.mjs  disaster-recovery-integration.test.ts  disaster-recovery.test.ts  docker-executor-smoke.test.ts  executor.test.ts  git-ref.test.ts  gitea.test.ts  graceful-shutdown.test.ts  harness-server.test.ts  harness.test.ts  loom-api-phase2.test.ts  loom-api.test.ts  (+20 more)
(+149 files in other folders)
