[package]
name = "loom-desktop"
version = "0.1.0"
description = "Loom agent workflow desktop client"
authors = ["Loom contributors"]
edition = "2021"
rust-version = "1.85"

[lib]
name = "loom_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
e2e = ["dep:tauri-plugin-wdio"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
futures-util = "0.3"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
openidconnect = { version = "4.0.1", default-features = false, features = ["reqwest", "rustls-tls"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots", "stream"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-wdio = { version = "1.2.0", optional = true }
tokio = { version = "1", features = ["macros", "sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
url = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[dev-dependencies]
minisign-verify = "0.2.5"
rcgen = "0.13"
